- Fixed bug #44209: strtotime doesn't support 64 bit timestamps.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@253521 c90b9560-bf6c-de11-be94-00142212c4b1